2023-03-03  Tobias Illenseer <tillense@astrophysik.uni-kiel.de>

	* .gitignore: adds .gitignore file

2019-10-15  Jim Garlick <garlick.jim@gmail.com>

	* : Merge pull request #44 from garlick/fix_build_issues fix build issues on Ubuntu 18.04 and modern INDI packages

2019-10-15  Jim Garlick <garlick.jim@gmail.com>

	* configure.ac, src/cmd/Makefile.am: build: use cfitsio pkgconfig
	file Problem: configure logic allows configure to succeed but build to
	fail if libcfitsio-dev build prereq is not installed.  libcfitsio (Ubuntu 18.04) now ships with a pkgconfig file so switch
	configure over to use that. The pkgconfig logic also defaults to
	fail-on-missing.

2019-10-15  Jim Garlick <garlick.jim@gmail.com>

	* src/common/libutil/Makefile.am: build: silence benign compiler
	warnings Problem: compliation fails because gcc-7.4.0 now issues warnings
	about liblsd's use of assignment within parens.  Disable the warnings for that subdirectory only.

2018-02-13  Jim Garlick <garlick.jim@gmail.com>

	* : Merge pull request #40 from garlick/dlopen_failure libsbig: change default dlopen path

2017-10-14  Jim Garlick <garlick.jim@gmail.com>

	* : Merge pull request #37 from garlick/dlopen_path libsbig/handle: dlopen libsbigudrv.so

2017-10-14  Jim Garlick <garlick.jim@gmail.com>

	* : Merge pull request #36 from garlick/stf8300c add --color-convert option for single shot color cameras like
	STF-8300C

2017-10-14  Jim Garlick <garlick.jim@gmail.com>

	* src/cmd/sbig-snap.c: cmd/sbig-snap: [cleanup] drop trailing
	whitespace

2017-10-14  Jim Garlick <garlick.jim@gmail.com>

	* src/cmd/sbig-snap.c, src/common/libsbig/sbfits.c,
	src/common/libsbig/sbfits.h: libsbig/sbfits: allow multiple
	SWMODIFY, HISTORY cards Change sbfits_set_history() which allowed one SWMODIFY, HISTORY
	tuple to be added to the FITS file, into sbfits_add_history() which