@@ -1,5 +1,17 @@
 2023-03-03  Tobias Illenseer <tillense@astrophysik.uni-kiel.de>
 
+	* README.md, src/cmd/sbig-cfw.c, src/cmd/sbig-snap.c,
+	src/common/libini/ini.c, src/common/libsbig/camera.c,
+	src/common/libsbig/cfw.c, src/common/libsbig/cfw.h: filter wheel
+	error handling improved and initialization implemend
+
+2023-03-03  Tobias Illenseer <tillense@astrophysik.uni-kiel.de>
+
+	* ChangeLog: adds automatically generated ChangeLog file using
+	git2cl
+
+2023-03-03  Tobias Illenseer <tillense@astrophysik.uni-kiel.de>
+
 	* .gitignore: adds .gitignore file
 
 2019-10-15  Jim Garlick <garlick.jim@gmail.com>
